brandnewproject/src/objects/Students_fee__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <formula>Students_name__r.Student_ID__c</formula>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Students_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Students name</label>
        <referenceTo>Students_Information__c</referenceTo>
        <relationshipLabel>Students fees</relationshipLabel>
        <relationshipName>Students_fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>subjects__c</fullName>
        <label>subjects</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maths A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Maths B</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Sanskrit</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Students fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Students fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>